# Slambook2

./: README.md
ch2/: CMakeLists.txt  helloSLAM.cpp  libHelloSLAM.cpp  libHelloSLAM.h
ch2/.kdev4/: ch2.kdev4
ch3/: CMakeLists.txt
ch3/AxB/: CMakeLists.txt  linearequation.cpp
ch3/examples/: CMakeLists.txt  coordinateTransform.cpp  plotTrajectory.cpp
ch3/extract/: CMakeLists.txt  extract.cpp
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useEigen/.kdev4/: useEigen.kdev4
ch3/useGeometry/: CMakeLists.txt  useGeometry.cpp
ch3/visualizeGeometry/: .Readme.txt.swp
ch4/: CMakeLists.txt
ch4/example/: CMakeLists.txt  trajectoryError.cpp
ch4/useSophus/: CMakeLists.txt  useSophus.cpp
ch5/: CMakeLists.txt
ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp  undistortImage.cpp
ch5/rgbd/: CMakeLists.txt  joinMap.cpp
ch5/stereo/: CMakeLists.txt  stereoVision.cpp
ch6/: CMakeLists.txt  ceresCurveFitting.cpp  g2oCurveFitting.cpp  gaussNewton.cpp  testYaml.cpp  useYaml.cpp
ch7/: CMakeLists.txt  orb_cv.cpp  orb_self.cpp
