cmake_minimum_required (VERSION 2.8)
project(ch7)

add_definitions("-DENABLE_SSE")
set(CMAKE_CXX_FLAGS "-std=c++11 -O2 ${SSE_FLAGS} -msse4")
list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
set ( CMAKE_BUILD_TYPE "Debug")


find_package(OpenCV REQUIRED)

include_directories (
	${OpenCV_INCLUDE_DIRS}
	)

add_executable(orb_cv orb_cv.cpp)
target_link_libraries(orb_cv ${OpenCV_LIBS})
add_executable(orb_self orb_self.cpp)
target_link_libraries(orb_self ${OpenCV_LIBS})
