find_package(Pangolin REQUIRED)
find_package(OpenCV REQUIRED)
include_directories (${Pangolin_LNCLUDE_DIR})
include_directories (${OpenCV_INCLUDE_DIRS})
include_directories ("usr/include/eigen3")
add_executable(stereoVision stereoVision.cpp)
target_link_libraries(stereoVision ${OpenCV_LIBS} ${Pangolin_LIBRARIES})
